# ff-python-source-metrics

./: README.md  pyproject.toml
data/raw/: pyfiles.txt  sloccount.txt
notebooks/: sloccount.ipynb
